Add sass structure, and set bg

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -1,3 +1,15 @@
+//Abstracts
+@import 'variables';
+//Base
+@import 'typography';
+@import 'base';
+//Layout
+@import 'layout';
+//Components
+//Pages
+//Themes
+//Vendors
+
 h1 {
 	color: slateblue;
 }
