--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -5,6 +5,121 @@ body {
 body {
   background-color: #171c28;
   color: #ffffff;
+  margin: 0 3.875rem;
+}
+
+main {
+  margin: 0 3.875rem;
+}
+
+header.header-website {
+  height: 75px;
+  margin-bottom: 15px;
+}
+
+.section-display {
+  display: flex;
+}
+.section-display .text-content {
+  flex: 1;
+}
+.section-display .text-content .title {
+  font-size: 3.125rem;
+  line-height: 1.1;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+.section-display .text-content .paragraph {
+  font-size: 1.25rem;
+  line-height: 1.6;
+  margin-bottom: 1rem;
+}
+.section-display .illustration {
+  flex: 1;
+}
+.section-display .illustration img {
+  max-width: 100%;
+  display: block;
+  margin: auto;
+}
+
+.btn {
+  padding: 15px 30px;
+  border: solid 1px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: all ease 0.3s;
+}
+.btn:hover {
+  background-color: #ffffff;
+  color: #55198b;
+  transform: translateY(-10px);
+}
+.btn.btn-primary {
+  background-color: #55198b;
+  border-color: darkenBorder(#55198b);
+  color: #ffffff;
+}
+.btn.btn-primary:hover {
+  background-color: #8930da;
+  color: #171c28;
+}
+.btn.btn-secondary {
+  background-color: #aaa5ff;
+  border-color: darkenBorder(#aaa5ff);
+  color: #171c28;
+}
+.btn.btn-secondary:hover {
+  background-color: white;
+  color: #171c28;
+}
+.btn.btn-gray {
+  background-color: #868e96;
+  border-color: darkenBorder(#868e96);
+  color: #171c28;
+}
+.btn.btn-gray:hover {
+  background-color: #bdc1c5;
+  color: #171c28;
+}
+.btn.btn-lightgray {
+  background-color: #f3efef;
+  border-color: darkenBorder(#f3efef);
+  color: #171c28;
+}
+.btn.btn-lightgray:hover {
+  background-color: white;
+  color: #171c28;
+}
+.btn.btn-dark {
+  background-color: #171c28;
+  border-color: darkenBorder(#171c28);
+  color: #ffffff;
+}
+.btn.btn-dark:hover {
+  background-color: #3c4969;
+  color: #ffffff;
+}
+.btn.btn-white {
+  background-color: #ffffff;
+  border-color: darkenBorder(#ffffff);
+  color: #171c28;
+}
+.btn.btn-white:hover {
+  background-color: white;
+  color: #171c28;
+}
+.btn.btn-accent {
+  background-color: #fec131;
+  border-color: darkenBorder(#fec131);
+  color: #171c28;
+}
+.btn.btn-accent:hover {
+  background-color: #fee097;
+  color: #171c28;
 }
 
 h1 {
